# factory-registration-ref

./: .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  requirements.txt  requirements.txt.pinned
.archive/: docker_run.sh
.archive/data/certs/: local-ca.key
.archive/data/devices/: fb13bde1-29d0-48ea-899a-edb3d5c0a459
.environment/local/: backend
.github/workflows/: tests.yml
backend/: app.py  crypto.py  pyproject.toml
backend/.boot/: example.sh
backend/auth/: anonymous.py
backend/config/: settings.py
backend/dto/: device.py
backend/responses/: error.py
backend/util/: foundries.py  logging.py  sota_toml.py
provision/docker/backend/local/: Dockerfile
provision/docker/backend/local/data/certs/: .gitignore  factory_ca.pem  local-ca.pem  tls-crt
registration_ref/: crypto.py
tests/: test_crypto.py
