[tool.poetry]
name = "reference_server"
version = "0.1.0"
description = "A reference server implementation for Foundries.io registration using Starlette"
authors = ["Eric Bode <eric.bode@foundries.io>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "36.0.1"
requests = "2.27.1"
starlette = "0.18.0"
uvicorn = "0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
