[project]
name = "reference_server"
version = "0.1.0"
description = "A reference server implementation for Foundries.io registration using Starlette"
authors = [{ name = "Eric Bode", email = "eric.bode@foundries.io>"}]
requires-python = ">=3.14"

dependencies = [
  "cryptography",
  "requests",
  "starlette",
  "uvicorn"
]

[dependency-groups]
dev = [
  "types-cryptography",
  "mypy",
  "types-requests",
  "black",
  "isort"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
